Fixed right buttons overflow in mobile devices

--- a/static/style.css
+++ b/static/style.css
@@ -27,9 +27,7 @@
   text-align:center;
 } */
 
-#container{
-  margin:0px auto;
-}
+
 
 /* .bodytext{
   font-family: Roboto;
